--- a/views/shaka.ejs
+++ b/views/shaka.ejs
@@ -3,16 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>TurtleTube - Basic Test</title>
-    <!-- Load the Shaka Player library. -->
+
+    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/stylesheets/starter-template.css" rel="stylesheet">
+
+    
     <script src="/shaka/js/shaka-player.compiled.js"></script>
   </head>
   <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Home</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">DerrickPlayer</a></li>
+            <li><a href="/shaka">ShakaPlayer</a></li> 
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
     <video id="video"
            width="640" height="480"
            crossorigin="anonymous"
            controls>
       Your browser does not support HTML5 video.
     </video>
+
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+
   </body>
   <script>
     function initPlayer() {
