added testcode pratice.js to test somethings

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="icon" href="../../favicon.ico">
 
     <script src="js/app.js"></script>
+    <script src="js/pratice.js"></script>
 
     <title>Choice Your Player mode</title>
 
@@ -45,6 +46,11 @@
       <tr>
         <td colspan="3">
           <button id="loadButton" onclick="app.loadStream();">Load stream</button>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <button id="praticeButton" onclick="pratice.showSampleCodeTwo();">Pratice</button>
         </td>
       </tr>
     </table>
