--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,12 @@
     <script src="js/app.js"></script>
     <script src="js/pratice.js"></script>
 
-    <title>Choice Your Player mode</title>
+    <title>Mediasource Demo play</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="stylesheets/starter-template.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -27,21 +25,14 @@
        <tr class="dash">
         <td colspan="2">
           <select id="mpdList" onchange="app.onMpdChange()">
-            <option value="assets/angel_one.mpd">"Angel One" (TNG clip) - multilingual, subtitles, VP8</option>
-            <option value="assets/car-20120827-manifest.mpd">"Car" (YT DASH test) - MP4</option>
-            <option value="assets/car_cenc-20120827-manifest.mpd">"Car/CENC" (YT DASH EME test) - MP4, ClearKey</option>
-            <option value="assets/feelings_vp9-20130806-manifest.mpd">"Feelings" (YT DASH test) - VP9</option>
-            <option value="assets/feelings_audio_only-20130806-manifest.mpd">"Feelings" (YT DASH test) - Audio only</option>
-            <option value="assets/car_segmenttemplate.mpd">"Car/SegmentTemplate" (Chromecast test) - MP4 (no SIDX, video only), Widevine</option>
-            <option value="//download.tsi.telecom-paristech.fr/gpac/DASH_CONFORMANCE/TelecomParisTech/mp4-main-multi/mp4-main-multi-mpd-AV-NBS.mpd">"GPAC/SegmentList" (conformance test)</option>
-            <option value="assets/oops_cenc-20121114-signedlicenseurl-manifest.mpd">"Oops" (modified YT DASH EME test) - MP4, multi-DRM</option>
-            <option value="assets/oops_cenc_pssh.mpd">"Oops" (modified YT DASH EME test) - MP4, Widevine, PSSH in MPD</option>
-            <option value="//storage.googleapis.com/widevine-demo-media/sintel-1080p/dash.mpd">"Sintel" (1080p high bitrate test) - MP4</option>
-            <option value="//storage.googleapis.com/widevine-demo-media/sintel-multicodec-4k/dash.mpd">"Sintel" (4k) - MP4, VP8, VP9</option>
-            <option value="assets/live.mpd">"NormalLive</option>
+            <option value="assets/angel_one.mpd">"Simple play local</option>
+            <option value="assets/angel_one.mpd">"Simple play local with buffer</option>
+            <option value="assets/angel_one.mpd">"Normal MPD not encoded content </option>
+            <option value="assets/angel_one.mpd">"encoded content </option>
           </select>
         </td>
       </tr>
+      
       
       <tr>
         <td colspan="3">
@@ -49,7 +40,7 @@
         </td>
       </tr>
       <tr>
-        <td colspan="3">
+        <td colspan="2">
           <button id="praticeButton" onclick="pratice.showSampleCodeTwo();">Pratice</button>
         </td>
       </tr>
