--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -34,8 +34,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
-            <li><a href="/shaka">ShakaPlayer</a></li>
-            <li><a href="/vidoe">VideoJs</a></li>
+               <li><a href="/shaka">ShakaPlayer</a></li>
+            <li><a href="/video">VideoJs</a></li>
+            <li><a href="/ms">MS</a></li>
             <li><a href="/setting">Setting</a></li>
           </ul>
         </div>
