--- a/views/shaka.ejs
+++ b/views/shaka.ejs
@@ -31,6 +31,8 @@
             <li class="active"><a href="/">DerrickPlayer</a></li>
             <li><a href="/shaka">ShakaPlayer</a></li>
             <li><a href="/video">VideoJs</a></li>
+            <li><a href="/ms">MS</a></li>
+            
             <li><a href="/setting">Setting</a></li>
           </ul>
         </div>
