--- a/views/video.ejs
+++ b/views/video.ejs
@@ -34,9 +34,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
-            <li><a href="/shaka">ShakaPlayer</a></li>
-            <li><a href="/shaka">VideoJs</a></li>
-            <li><a href="/shaka">Setting</a></li>
+             <li><a href="/shaka">ShakaPlayer</a></li>
+            <li><a href="/video">VideoJs</a></li>
+            <li><a href="/ms">MS</a></li>
+            <li><a href="/setting">Setting</a></li>
           </ul>
         </div>
       </div>
