--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,11 @@
     <script src="js/app.js"></script>
     <script src="js/pratice.js"></script>
 
-    <title>Mediasource Demo play</title>
+    <title>Derrick test</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="stylesheets/starter-template.css" rel="stylesheet">
     <link href="stylesheets/basic.css" rel="stylesheet">
   </head>
 
@@ -25,10 +24,10 @@
   <table>
        <tr class="dash">
         <td colspan="2">
-          <select class="contentsList"  onchange="app.onMpdChange()">
+          <select class="contentsList" id="contentsList"  onchange="app.onContentChange()">
             <option value="assets/frag_bunny.mp4"> local play segmentfile </option>
-            <option value="assets/angel_one.mpd"> dash play segmentlist</option>
-            <option value="assets/angel_one.mpd"> dash play segmenttemplete </option>
+            <option value="assets/sample_dash.xml"> dash play segmentlist</option>
+            <option value="assets/live.mpd"> dash play segmenttemplete </option>
             <option value="assets/angel_one.mpd"> dash play segmenttemplete with eme  </option>
           </select>
 
