--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="icon" href="../../favicon.ico">
 
     <script src="js/app.js"></script>
+    <script src="js/player.js"></script>
     <script src="js/pratice.js"></script>
 
     <title>Derrick test</title>
