--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
     <script src="js/app.js"></script>
     <script src="js/player.js"></script>
     <script src="js/pratice.js"></script>
+    <script src="js/loader.js"></script>
+
 
     <title>Derrick test</title>
 
@@ -26,6 +28,7 @@
        <tr class="dash">
         <td colspan="2">
           <select class="contentsList" id="contentsList"  onchange="app.onContentChange()">
+            <option value="assets/frag_bunny.mp4" value="0"> demoplay baic video tag </option>
             <option value="assets/frag_bunny.mp4"> local play segmentfile </option>
             <option value="assets/sample_dash.xml"> dash play segmentlist</option>
             <option value="assets/live.mpd"> dash play segmenttemplete </option>
@@ -55,9 +58,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
             <li><a href="/shaka">ShakaPlayer</a></li>
-            <li><a href="/video">VideoJs</a></li>
+            <!-- <li><a href="/video">VideoJs</a></li> -->
             <!-- <li><a href="/ms">MS</a></li> -->
-            <li><a href="/setting">Setting</a></li>
+            <!-- <li><a href="/setting">Setting</a></li> -->
           </ul>
         </div>
       </div>
