--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,10 +57,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
+            <li><a href="/video">Video</a></li>
             <li><a href="/shaka">ShakaPlayer</a></li>
-            <!-- <li><a href="/video">VideoJs</a></li> -->
-            <!-- <li><a href="/ms">MS</a></li> -->
-            <!-- <li><a href="/setting">Setting</a></li> -->
           </ul>
         </div>
       </div>
@@ -68,9 +66,8 @@
 
       <video id="video"
            width="640" height="480"
-           crossorigin="anonymous"
            controls>
-      Your browser does not support HTML5 video.
+        
     </video>
  
 
