--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
        <tr class="dash">
         <td colspan="2">
           <select class="contentsList" id="contentsList"  onchange="app.onContentChange()">
-            <option value="assets/frag_bunny.mp4" value="0"> demoplay baic video tag </option>
+            <option value="assets/frag_bunny.mp4">Demo : danamic play with video tag </option>
             <option value="assets/frag_bunny.mp4"> local play segmentfile </option>
             <option value="assets/sample_dash.xml"> dash play segmentlist</option>
             <option value="assets/live.mpd"> dash play segmenttemplete </option>
