--- a/views/video.ejs
+++ b/views/video.ejs
@@ -40,6 +40,22 @@
         </div>
       </div>
     </nav>
+        
+       <!-- sample 1 --> 
+       <video id="video" src="/assets/frag_bunny.mp4"
+           width="640" height="480"
+           controls>
+        
+       </video>
+      
+      <!-- sample 2 -->
+       <!-- <video width="360" height="240" >
+
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogv" type="video/ogg">
+        <source src="movie.webm" type="video/webm">
+        <p> 현재 사용하고 있는 브라우저는 비디오 태그를 지원하지 않습니다. </p>
+      </video> -->
 
 
 
