--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <script src="js/player.js"></script>
     <script src="js/pratice.js"></script>
     <script src="js/loader.js"></script>
+    <script src="js/segmentplayer.js"></script>
 
 
     <title>Derrick test</title>
@@ -57,7 +58,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
-            <li><a href="/video">Video</a></li>
+            <li><a href="/simple video tag">Video</a></li>
             <li><a href="/shaka">ShakaPlayer</a></li>
           </ul>
         </div>
