--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <script src="js/pratice.js"></script>
     <script src="js/loader.js"></script>
     <script src="js/segmentplayer.js"></script>
+    <script src="js/test.js"></script>
 
 
     <title>Derrick test</title>
