--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">DerrickPlayer</a></li>
-            <li><a href="/simple video tag">Video</a></li>
+            <li><a href="/video">Video</a></li>
             <li><a href="/shaka">ShakaPlayer</a></li>
           </ul>
         </div>
