add resetbutton and worked about separltly files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,7 @@
           </select>
 
           <button id="loadButton" onclick="app.loadStream();">Load stream</button>
+          <button id="resetButton" onclick="app.refersh();">Reset</button>
         </td>
       </tr>
       
