--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,11 +30,11 @@
        <tr class="dash">
         <td colspan="2">
           <select class="contentsList" id="contentsList"  onchange="app.onContentChange()">
-            <option value="assets/frag_bunny.mp4">Demo : danamic play with video tag </option>
-            <option value="assets/frag_bunny.mp4"> local play segmentfile </option>
-            <option value="assets/sample_dash.xml"> dash play segmentlist</option>
-            <option value="assets/live.mpd"> dash play segmenttemplete </option>
-            <option value="assets/angel_one.mpd"> dash play segmenttemplete with eme  </option>
+            <option value="assets/frag_bunny.mp4">Demoplay with video tag </option>
+            <option value="assets/frag_bunny.mp4">Demoplay simpleplay not buffering</option>
+            <option value="assets/frag_bunny.mp4">Demoplay simpleplay buffering</option>
+            <option value="assets/sample_dash.xml">Demoplay with DASH SegmentList</option>
+            <option value="assets/live.mpd">Demoplay with DASH SegmentTemplete</option>
           </select>
 
           <button id="loadButton" onclick="app.loadStream();">Load stream</button>
