added just simpleplay with mediasource

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
     <script src="js/loader.js"></script>
     <script src="js/segmentplayer.js"></script>
     <script src="js/test.js"></script>
+    <script src="js/BasePlayer.js"></script>
 
 
     <title>Derrick test</title>
