working on simple dash player ,So first added dashplayer.jsfile and did comment to test dashplayer only

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,9 @@
     <script src="js/loader.js"></script>
     <script src="js/segmentplayer.js"></script>
     <script src="js/test.js"></script>
-    <script src="js/BasePlayer.js"></script>
+    <script src="js/dashplayer.js"></script>
+    <!-- <script src="js/BasePlayer.js"></script> -->
+    
 
 
     <title>Derrick test</title>
@@ -34,7 +36,7 @@
             <option value="assets/frag_bunny.mp4">Demoplay with video tag </option>
             <option value="assets/frag_bunny.mp4">Demoplay simpleplay not buffering</option>
             <option value="assets/frag_bunny.mp4">Demoplay simpleplay buffering</option>
-            <option value="assets/sample_dash.xml">Demoplay with DASH SegmentList</option>
+            <option value="assets/simpedash.xml">Demoplay with DASH SegmentList</option>
             <option value="assets/live.mpd">Demoplay with DASH SegmentTemplete</option>
           </select>
 
