updated index,ejs and loader properly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
     <script src="js/segmentplayer.js"></script>
     <script src="js/test.js"></script>
     <script src="js/dashplayer.js"></script>
+    <script src="js/basePlayer.js"></script>
     <!-- <script src="js/BasePlayer.js"></script> -->
     
 
@@ -36,7 +37,7 @@
             <option value="assets/frag_bunny.mp4">Demoplay with video tag </option>
             <option value="assets/frag_bunny.mp4">Demoplay simpleplay not buffering</option>
             <option value="assets/frag_bunny.mp4">Demoplay simpleplay buffering</option>
-            <option value="assets/simpedash.xml">Demoplay with DASH SegmentList</option>
+            <option value="assets/sample_dash.mpd">Demoplay with DASH SegmentList</option>
             <option value="assets/live.mpd">Demoplay with DASH SegmentTemplete</option>
           </select>
 
